<resources>
    <string name="app_name">Marc</string>
    <string name="action_menu">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="play_button_text">Exercise</string>
    <string name="logo_description">Picture of the Marc logo</string>
    <string name="exercise_icon">Exercise icon</string>
    <string name="achievements_decks">Achievements button</string>
    <string name="deck_icon">Deck icon</string>
    <string name="achievements_icon">Achievements button</string>
    <string name="decks">Decks</string>
    <string name="achievements">Achievements</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="edit_note_front_hint">Card front</string>
    <string name="edit_note_hint_back">Card back</string>
    <string name="edit_note_save">Save</string>
    <string name="stats">Statistics</string>
    <string name="stats_gameMode_text">Game:\u0020</string>
    <string name="stats_highScore_text">High Score:\u0020</string>
    <string name="stats_averageScore_text">Average Score:\u0020</string>
    <string name="deck_title">deck_title</string>
    <string name="logout">Logout</string>
    <string name="retry_string">Retry</string>
    <string name="return_to_deck_string">Return to decks</string>
    <string name="home_string">Home</string>
    <string name="exercises_string">Exercises</string>
    <string name="proceed_string">Proceed</string>
    <string name="quick_menu_string">Quick Menu</string>
    <string name="flashcard_mode_string">Flashcard Mode</string>
    <string name="quiz_mode_string">Quiz Mode</string>
    <string name="toolbar_string">Toolbar</string>
    <string name="add_user_popup_username">Username</string>
    <string name="stats_timesPlayed_text">Times Played:\u0020</string>
    <string name="cloze_text_hint">Text</string>
</resources>
