<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home_button"
        android:icon="@drawable/ic_sharp_home_24px"
        android:orderInCategory="1"
        android:title="@string/home_string" />

    <item
        android:id="@+id/exercises_button"
        android:icon="@drawable/ic_exercise_remake"
        android:orderInCategory="2"
        android:title="@string/exercises_string" />

    <item
        android:id="@+id/decks_button"
        android:icon="@drawable/ic_deck"
        android:orderInCategory="3"
        android:title="@string/decks" />

    <item
        android:id="@+id/stats_button"
        android:icon="@drawable/ic_baseline_bar_chart_24px"
        android:orderInCategory="4"
        android:title="@string/stats" />

    <item
        android:id="@+id/achievements_button"
        android:icon="@drawable/ic_trophy"
        android:orderInCategory="5"
        android:title="@string/achievements" />

</menu>