<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_exercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    tools:context=".view.exerciseView.ExerciseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/activity_toolbar" />

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackGround">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/deck_button"
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ic_menu_remake_v2"
                    android:contentDescription="@string/play_button_text"
                    android:elevation="10dp"
                    android:src="?android:attr/selectableItemBackground"
                    android:onClick="flashcardClicked"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_button" />

                <TextView
                    android:id="@+id/deck_text"
                    android:layout_width="180dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="40dp"
                    android:elevation="10dp"
                    android:text="@string/flashcard_mode_string"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/deck_button"
                    app:layout_constraintEnd_toEndOf="@+id/deck_button"
                    app:layout_constraintTop_toBottomOf="@+id/deck_button"
                    app:layout_constraintVertical_bias="0.484" />

                <ImageView
                    android:id="@+id/deck_image"
                    android:layout_width="67dp"
                    android:layout_height="73dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/deck_icon"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/deck_button"
                    app:layout_constraintStart_toStartOf="@+id/deck_button"
                    app:layout_constraintTop_toBottomOf="@+id/deck_button"
                    app:layout_constraintVertical_bias="0.497"
                    app:srcCompat="@drawable/flashcard_logo" />

                <ImageButton
                    android:id="@+id/exercise_button"
                    android:layout_width="350dp"
                    android:layout_height="100dp"
                    android:background="@drawable/ic_menu_remake_v2"
                    android:contentDescription="@string/play_button_text"
                    android:elevation="10dp"
                    android:src="?android:attr/selectableItemBackground"
                    android:onClick="quizClicked"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.491"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/exercise_image"
                    android:layout_width="67dp"
                    android:layout_height="73dp"
                    android:layout_marginStart="24dp"
                    android:contentDescription="@string/exercise_icon"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toTopOf="@+id/exercise_button"
                    app:layout_constraintStart_toStartOf="@+id/exercise_button"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_button"
                    app:layout_constraintVertical_bias="0.497"
                    app:srcCompat="@drawable/ic_quiz_logo" />

                <TextView
                    android:id="@+id/exercise_text"
                    android:layout_width="180dp"
                    android:layout_height="34dp"
                    android:layout_marginEnd="40dp"
                    android:elevation="10dp"
                    android:text="@string/quiz_mode_string"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/exercise_button"
                    app:layout_constraintEnd_toEndOf="@+id/exercise_button"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_button"
                    app:layout_constraintVertical_bias="0.484" />
            </android.support.constraint.ConstraintLayout>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <include
        android:id="@+id/activity_navigation"
        layout="@layout/activity_navigation" />

</android.support.v4.widget.DrawerLayout>